Fixed spacing on all graphs in dashboard, watchlist, and stock details page

--- a/react-app/src/components/Watchlist/Watchlist.css
+++ b/react-app/src/components/Watchlist/Watchlist.css
@@ -141,6 +141,5 @@
     width: auto;
     justify-content: flex-end;
     align-items: center;
-    padding-bottom: 1px;
-    margin-right: 10px;
+    padding-left: 10px;
 }
